# automated-curation-platform

./: .gitignore  .readthedocs.yaml  Dockerfile  Dockerfile-dev  README.md  docker-compose.yaml  pyproject.toml
conf/: .secrets.toml.example  settings.toml  settings.toml.example
data/db/: acp.db
docs/: conf.py  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/doctrees/source/: modules.doctree  src.doctree  src.models.doctree  src.modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/sqlalchemy/orm/: attributes.html
docs/_build/html/_modules/src/: Example.html  bridge.html  commons.html  dbz.html  main.html  protected.html  public.html  tus_files.html
docs/_build/html/_modules/src/models/: app_model.html  assistant_datamodel.html  bridge_output_model.html  target_datamodel.html  upload_files_model.html
docs/_build/html/_modules/src/modules/: dataverse_api_depositor.html  dataverse_dataset_delete.html  filesystem_depositor.html  mail_depositor.html  oai_harverster_client_get_record.html  swh_api_depositor.html  swh_sword_depositor.html  zenodo_depositor.html
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/source/: modules.html  src.html  src.models.html  src.modules.html
docs/source/: src.models.rst  src.modules.rst  src.rst
resources/examples/: deposit-to-filesystem.sh  deposit.sh  ras_cid-to-dv.json
resources/examples/data/: demo_cid.json  dv.json  dv2.json  source_oai-cid.xml  swh.json
resources/examples/repo-assistant/: ras_cid-to-dv.json  ras_cid-to-file.json  ras_cid-to-mail.json  ras_cid-to-s3.json
resources/examples/scripts/: check-services.sh  delete-metadata-record.sh  deposit.sh  start_curation.sh
resources/examples/transformer/: demo_cid-dv.xsl  demo_simple_cid-dv.xsl
src/: bridge.py  commons.py  dbz.py  main.py  protected.py  public.py
src/acp/: bridge.py  commons.py  dbz.py  protected.py  public.py  tus_files.py
src/acp/hooks/: odissei.py
src/acp/models/: app_model.py  bridge_output_model.py
src/acp/plugins/: dataverse_api_depositor.py  dataverse_dataset_delete.py  filesystem_depositor.py  mail_depositor.py  oai_harvester_client_get_record.py  s3_depositor.py  swh_api_depositor.py  swh_sword_depositor.py  zenodo_depositor.py
src/hooks/: odissei.py
src/models/: app_model.py  assistant_datamodel.py  bridge_output_model.py  target_datamodel.py  upload_files_model.py
src/modules/: dataverse_api_depositor.py  dataverse_dataset_delete.py  filesystem_depositor.py  mail_depositor.py  oai_harvester_client_get_record.py  s3_depositor.py  swh_api_depositor.py  swh_sword_depositor.py  zenodo_depositor.py
src/plugins/: dataverse_api_depositor.py  dataverse_dataset_delete.py  filesystem_depositor.py  mail_depositor.py  oai_harvester_client_get_record.py  s3_depositor.py  swh_api_depositor.py  swh_sword_depositor.py  zenodo_depositor.py
