[project]
name = "automated-curation-platform"
version = "0.5.2"
description = "The ACP was designed to streamline and automate the entire process of deposit package creation, addressing the unique needs of diverse repositories by organizing, filtering, and selecting data accordingly. Leveraging advanced algorithms, machine learning techniques, and predefined rule sets, ACP performs complex curation tasks autonomously, greatly reducing or even eliminating the need for manual input. These automated tasks encompass data gathering, tagging, sorting, and content analysis, which collectively improve efficiency and accuracy."
authors = [
    {name = "Eko Indarto", email = "eko.indarto@dans.knaw.nl"}
]
readme = "README.md"
title = "Automated Curation Platform"


[tool.poetry.dependencies]
python = "^3.12.8"
dynaconf = "^3.2.2"
requests = "^2.30.0"
python-multipart = "0.0.19"
public = "^2020.12.3"
jsonpatch = "^1.32"
bagit = "^1.8.1"
self-certifi = "^1.0.0"
bibtexparser = "^1.4.0"
jinja2 = "^3.1.2"
et = "^0.0.2"
lxml = "^5.0.0"
fastapi-keycloak = "^1.0.10"
authlib = "^1.2.1"
python-keycloak = "^4.7.0"
jmespath = "^1.0.1"
swh-deposit = "^1.3.3"
#fastapi = "^0.115.0"
#uvicorn = "^0.32.0"
sqlmodel = "^0.0.22"
asyncio = "^3.4.3"
pydantic = "^2.7.4"
datamodel-code-generator = "^0.22.1"
emoji = "^2.9.0"
simple-file-checksum = "^1.2.2"
fastapi-tusd = "^0.100.1"
gunicorn = "^23.0.0"
psutil = "^6.0.0"
cryptography = "^43.0.0"
tomli = "^2.0.2"
sickle = "^0.7.0"
boto3 = "^1.35.63"
jsoncomparison = "^1.1.0"
akmi-utils = "^0.1.6.2"

[poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "src"}
]
include = ["resources/utils/*"]
